# pyinspur

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
conf/: config.example.yml
inspur/: __init__.py  config_manager.py  inspur_client.py  login_manager.py  user_manager.py
utils/: __init__.py  common_utils.py  constants.py  logger.py
